--- a/template/.github/workflows/main.yml.jinja
+++ b/template/.github/workflows/main.yml.jinja
@@ -41,7 +41,7 @@ jobs:
           commit_message: "Update repo to latest template"
   flake8:
     needs: "bump_template"
-    if: "{% raw %}${{ !failed() }}{% endraw %}"
+    if: "{% raw %}${{ !failure() }}{% endraw %}"
     runs-on: "{{ actions_runner }}"
     steps:
       - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.8"
@@ -50,7 +50,7 @@ jobs:
       - run: "flake8"
   pyright:
     needs: "bump_template"
-    if: "{% raw %}${{ !failed() }}{% endraw %}"
+    if: "{% raw %}${{ !failure() }}{% endraw %}"
     runs-on: "{{ actions_runner }}"
     steps:
       - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.8"
@@ -59,7 +59,7 @@ jobs:
       - run: "pyright"
   pytest-cov:
     needs: "bump_template"
-    if: "{% raw %}${{ !failed() }}{% endraw %}"
+    if: "{% raw %}${{ !failure() }}{% endraw %}"
     runs-on: "{{ actions_runner }}"
     steps:
       - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.8"
