--- a/template/.github/workflows/main.yml.jinja
+++ b/template/.github/workflows/main.yml.jinja
@@ -1,11 +1,6 @@
 name: "main"
 
-on:
-  workflow_dispatch:
-  push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+on: ["workflow_dispatch", "push"]
 
 jobs:
   changes:
@@ -39,7 +34,7 @@ jobs:
           commit_message: "Update repo to latest template"
   flake8:
     needs: "bump_template"
-    if: "{% raw %}${{ always() }}{% endraw %}"
+    if: "{% raw %}${{ !failure() }}{% endraw %}"
     runs-on: "{{ actions_runner }}"
     steps:
       - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.8"
@@ -48,7 +43,7 @@ jobs:
       - run: "flake8"
   pyright:
     needs: "bump_template"
-    if: "{% raw %}${{ always() }}{% endraw %}"
+    if: "{% raw %}${{ !failure() }}{% endraw %}"
     runs-on: "{{ actions_runner }}"
     steps:
       - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.8"
@@ -57,7 +52,7 @@ jobs:
       - run: "pyright"
   pytest-cov:
     needs: "bump_template"
-    if: "{% raw %}${{ always() }}{% endraw %}"
+    if: "{% raw %}${{ !failure() }}{% endraw %}"
     runs-on: "{{ actions_runner }}"
     steps:
       - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.8"
