Update `copier.yml` to reflect new documentation engine choice in `copier-python-init`
Fixes #272

--- a/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
@@ -69,15 +69,25 @@
 
     // * -------------------------------------------------------------------------- * //
     // * OTHER TASKS * //
-
-    {
+    {% if docs_engine == 'MyST' %}{
       "label": "task: sphinx-autobuild docs (preview)",
       "type": "process",
       "command": "pwsh",
       "args": ["-Command", "sphinx-autobuild docs _site"],
       "icon": { "id": "book" },
       "problemMatcher": []
-    },
+    },{% endif %}
+    {% if docs_engine == 'Jupyter Book' %}{
+      "label": "task: sphinx-autobuild docs (preview)",
+      "type": "process",
+      "command": "pwsh",
+      "args": [
+        "-Command",
+        "watchfiles 'jupyter-book build docs --path-output _site' docs"
+      ],
+      "icon": { "id": "book" },
+      "problemMatcher": []
+    },{% endif %}
     {
       "label": "task: snakeviz",
       "type": "process",
