--- a/template/{% if not override_gitignore %}.gitignore{% endif %}.jinja
+++ b/template/{% if not override_gitignore %}.gitignore{% endif %}.jinja
@@ -20,8 +20,8 @@ typings
 *.prof
 # To avoid committing rejected changes upon bumping template
 *.rej
-# Don't commit this duplicate of our answers. It's only used once on project creation.
-.copier-answers-init.yml
+# Don't commit first time setup script from copier-python-init
+first_time_setup.ps1
 # Don't commit code workspace files, which might be symlinked here
 *.code-workspace
 # Avoid committing local docs builds for previewing
