--- a/template/.github/workflows/sphinx.yml.jinja
+++ b/template/.github/workflows/sphinx.yml.jinja
@@ -22,9 +22,10 @@ jobs:
       - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.9"
         with:
           python-version: "{{ python_version }}"
-      - run: python -m sphinx -T -E docs _site
+      - run: "{% if docs_engine == 'Jupyter Book' %}jupyter-book build docs --path-output _site{% endif %}{% if docs_engine == 'MyST' %}python -m sphinx -T -E docs _site{% endif %}"
       - uses: "actions/upload-pages-artifact@v1"
   deploy:
+    if: "{% raw %}${{ !(github.event_name == 'pull_request') }}{% endraw %}"
     environment:
       name: "github-pages"
       url: "{% raw %}${{ steps.deployment.outputs.page_url }}{% endraw %}"
