Make little changes
- Add `copier -f -r $(git rev-parse HEAD:template)` task
- Template `renovate.json` on `override_precommit` to delegate pre-commit updates to the project repo
- Add `./requirements.txt` to the cache
- Make `bump.yml` work on push to all branches.

--- a/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
@@ -40,6 +40,14 @@
       "problemMatcher": []
     },
     {
+      "label": "setup: Bump template",
+      "type": "process",
+      "command": "pwsh",
+      "args": ["copier -f -r $(git rev-parse HEAD:template)"],
+      "icon": { "id": "folder" },
+      "problemMatcher": []
+    },
+    {
       "label": "setup: Setup project",
       "type": "process",
       "command": "pwsh",
