--- a/template/renovate.json.jinja
+++ b/template/renovate.json.jinja
@@ -1,9 +1,14 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", ":preserveSemverRanges", "group:allNonMajor"],
+  "extends": [
+    "config:base",
+    "group:allNonMajor",
+    {% if override_precommit %}":enablePreCommit",{% endif %}
+    ":preserveSemverRanges"
+  ],
   "automerge": true,
-  "git-submodules": { "enabled": true },
   "enabledManagers": ["pip_requirements", "git-submodules"],
+  "git-submodules": { "enabled": true },
   "packageRules": [
     {
       "groupName": "package",
