Deactivate virtual environment before deleting if it exists

--- a/template/setup.ps1.jinja
+++ b/template/setup.ps1.jinja
@@ -1,6 +1,7 @@
+if ($Env:VIRTUAL_ENV) { deactivate }
 $GLOBAL_PYTHON = 'py -{{ python_version }}'
 try { Invoke-Expression $("$GLOBAL_PYTHON --version") } catch [System.Management.Automation.CommandNotFoundException] { $GLOBAL_PYTHON = 'python{{ python_version }}' }
-Remove-Item -ErrorAction SilentlyContinue -Recurse -Force .venv
+Remove-Item -Recurse -Force .venv
 Invoke-Expression "$GLOBAL_PYTHON -m venv .venv --upgrade-deps"
 . ./update.ps1
 pre-commit install --install-hooks
