--- a/template/setup.ps1.jinja
+++ b/template/setup.ps1.jinja
@@ -1,7 +1,10 @@
 if ($Env:VIRTUAL_ENV) { deactivate }
+if (Test-Path .venv) {Remove-Item -Recurse -Force .venv}
 $GLOBAL_PYTHON = 'py -{{ python_version }}'
-try { Invoke-Expression $("$GLOBAL_PYTHON --version") } catch [System.Management.Automation.CommandNotFoundException] { $GLOBAL_PYTHON = 'python{{ python_version }}' }
-Remove-Item -Recurse -Force .venv
+try { Invoke-Expression $("$GLOBAL_PYTHON --version") }
+catch [System.Management.Automation.CommandNotFoundException] {
+    $GLOBAL_PYTHON = 'python{{ python_version }}'
+}
 Invoke-Expression "$GLOBAL_PYTHON -m venv .venv --upgrade-deps"
 . ./update.ps1
 pre-commit install --install-hooks
