Format `*.md` files with `markdownlint` in VSCode, unify with pre-commit settings

--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -157,7 +157,7 @@
 
   //* MD
   "[markdown]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint",
     "editor.wordWrap": "wordWrapColumn",
     //? Roughly matches the width of GitHub Markdown
     "editor.wordWrapColumn": 124,
