--- a/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
@@ -61,6 +61,9 @@
       "command": "pwsh",
       "args": ["update.ps1"],
       "icon": { "id": "folder" },
+      "runOptions": {
+        "runOn": "folderOpen"
+      },
       "problemMatcher": []
     },
 
