Fix settings key

--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -44,7 +44,7 @@
   },
 
   //* black, flake8, isort
-  "black-formatter.interpreter": "fromEnvironment", // ! Buggy right now
+  "black-formatter.importStrategy": "fromEnvironment",
   "black-formatter.args": [],
   "flake8.importStrategy": "fromEnvironment",
   "flake8.args": [],
