--- a/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
@@ -10,6 +10,8 @@
     // Introduce any project-specific tasks here.
     // Be sure to say override this file in the Copier questionnaire to keep changes.
 
+    // test
+
     // * -------------------------------------------------------------------------- * //
     // * GIT * //
     {
