--- a/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
@@ -43,7 +43,7 @@
       "label": "setup: Bump template",
       "type": "process",
       "command": "pwsh",
-      "args": ["copier -f -r $(git rev-parse HEAD:template)"],
+      "args": [".tools/scripts/bump_template.ps1"],
       "icon": { "id": "folder" },
       "problemMatcher": []
     },
