Reinstall pre-commit hooks on `update.ps1`

--- a/template/{% if not override_update %}update.ps1{% endif %}.jinja
+++ b/template/{% if not override_update %}update.ps1{% endif %}.jinja
@@ -12,3 +12,4 @@ pip install -U -r .tools/requirements/requirements_dev.txt
 pip uninstall -y {{ project_name }}
 python .tools/scripts/bump_pyproject.py
 pip install -e .
+pre-commit install --install-hooks
