--- a/template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -58,6 +58,14 @@ repos:
     rev: "v0.6.0"
     hooks:
       - id: markdownlint-cli2-fix
+  - repo: https://github.com/ikamensh/flynt/
+    rev: "0.77"
+    hooks:
+      - id: flynt
+  - repo: https://github.com/asottile/pyupgrade
+    rev: "v3.3.1"
+    hooks:
+    - id: "pyupgrade"
 {% if use_dvc %}
   - repo: https://github.com/iterative/dvc
     rev: "2.45.1"
