--- a/template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja
+++ b/template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja
@@ -65,7 +65,7 @@ repos:
   - repo: https://github.com/asottile/pyupgrade
     rev: "v3.3.1"
     hooks:
-    - id: "pyupgrade"
+      - id: pyupgrade
 {% if use_dvc %}
   - repo: https://github.com/iterative/dvc
     rev: "2.45.1"
