--- a/template/.pre-commit-config.yaml.jinja
+++ b/template/.pre-commit-config.yaml.jinja
@@ -13,6 +13,13 @@
 
 ci:
   autoupdate_schedule: quarterly
+{% if use_dvc %}
+  skip:
+    - dvc-pre-commit
+    - dvc-pre-push
+    - dvc-post-checkout
+{% endif %}
+
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
