Add synopses to setup and update scripts

--- a/template/setup.ps1.jinja
+++ b/template/setup.ps1.jinja
@@ -1,9 +1,13 @@
-if ($Env:VIRTUAL_ENV) { deactivate }
-if (Test-Path .venv) { Remove-Item -Recurse -Force .venv }
+<#.SYNOPSIS
+Set up the project, creating a virtual environment and then running update tasks.
+#>
+
+if ($Env:VIRTUAL_ENV) { 'deactivate' }
+if (Test-Path '.venv') { Remove-Item -Recurse -Force '.venv' }
 $GLOBAL_PYTHON = 'py -{{ python_version }}'
 try { Invoke-Expression $("$GLOBAL_PYTHON --version") }
 catch [System.Management.Automation.CommandNotFoundException] {
     $GLOBAL_PYTHON = 'python{{ python_version }}'
 }
-Invoke-Expression "$GLOBAL_PYTHON -m venv .venv --upgrade-deps"
-. ./update.ps1
+Invoke-Expression "$GLOBAL_PYTHON -m venv '.venv' --upgrade-deps"
+. './update.ps1'
