--- a/template/pytest.ini.jinja
+++ b/template/pytest.ini.jinja
@@ -1,4 +1,8 @@
 [pytest]
 addopts = -ra
 testpaths = tests
-filterwarnings = error
+filterwarnings = [
+    error,
+    ; https://github.com/streamlink/streamlink/pull/5167
+    ignore:.*pkg_resources/.declare_namespace.*:DeprecationWarning,
+    ]
