--- a/template/.github/workflows/main.yml.jinja
+++ b/template/.github/workflows/main.yml.jinja
@@ -41,7 +41,7 @@ jobs:
         with:
           python-version: "{{ python_version }}"
       - run: "isort --check-only ."
-  flake8:
+  ruff:
     needs: "bump_template"
     if: "{% raw %}${{ !failure() }}{% endraw %}"
     runs-on: "{{ actions_runner }}"
@@ -49,7 +49,7 @@ jobs:
       - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.11"
         with:
           python-version: "{{ python_version }}"
-      - run: "flake8"
+      - run: "ruff check --no-fix ."
   pyright:
     needs: "bump_template"
     if: "{% raw %}${{ !failure() }}{% endraw %}"
