--- a/template/.pre-commit-config.yaml.jinja
+++ b/template/.pre-commit-config.yaml.jinja
@@ -20,26 +20,20 @@ ci:
     - dvc-post-checkout
 {% endif %}
 
-
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: "v4.4.0"
     hooks:
       - id: end-of-file-fixer
       - id: trailing-whitespace
-  - repo: https://github.com/PyCQA/autoflake
-    rev: "v2.0.1"
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: "v0.0.245"
     hooks:
-      - id: autoflake
-        args: [-i, --remove-all-unused-imports, --ignore-init-module-imports]
+      - id: ruff
   - repo: https://github.com/psf/black
     hooks:
       - id: black
     rev: "23.1.0"
-  - repo: https://github.com/PyCQA/isort
-    rev: "5.12.0"
-    hooks:
-      - id: isort
   - repo: https://github.com/srstevenson/nb-clean
     rev: "2.4.0"
     hooks:
@@ -51,11 +45,6 @@ repos:
           - slideshow
           - special
           - --
-  - repo: https://github.com/asottile/pyupgrade
-    rev: "v3.3.1"
-    hooks:
-      - id: pyupgrade
-        args: ["--py{{ python_version | replace('.', '') }}-plus"]
   - repo: https://github.com/asottile/blacken-docs
     rev: "1.13.0"
     hooks:
@@ -65,14 +54,6 @@ repos:
     rev: "v0.6.0"
     hooks:
       - id: markdownlint-cli2-fix
-  - repo: https://github.com/ikamensh/flynt/
-    rev: "0.77"
-    hooks:
-      - id: flynt
-  - repo: https://github.com/asottile/pyupgrade
-    rev: "v3.3.1"
-    hooks:
-      - id: pyupgrade
 {% if use_dvc %}
   - repo: https://github.com/iterative/dvc
     rev: "2.45.1"
