--- a/template/.tools/pyproject.toml.jinja
+++ b/template/.tools/pyproject.toml.jinja
@@ -1,3 +1,20 @@
+[build-system]
+requires = ["flit_core >=3.3,<4"]
+build-backend = "flit_core.buildapi"
+
+[project]
+name = "{{ project_name }}"
+requires-python = ">={{ python_version }}"
+dependencies = []
+readme = "README.md"
+dynamic = ["version", "description"]
+[[project.authors]]
+name = "{{ project_owner_name }}"
+email = "{{ project_email }}"
+
+[project.urls]
+Home = "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}"
+
 [tool.ruff]
 fix = true
 select = ["ALL"]
