--- a/template/.github/workflows/main.yml.jinja
+++ b/template/.github/workflows/main.yml.jinja
@@ -13,7 +13,7 @@ jobs:
       - run: |-
           python -m pip install --upgrade pip
           pip install --upgrade setuptools wheel
-          pip install copier pyyaml
+          pip install copier toml
           copier --force --vcs-ref $(git rev-parse HEAD:template)
       - run: "python .tools/scripts/bump_pyproject.py"
       - run: |-
@@ -31,7 +31,7 @@ jobs:
       - run: |-
           python -m pip install --upgrade pip
           pip install --upgrade setuptools wheel
-          pip install copier pyyaml
+          pip install copier toml
           copier --force --vcs-ref $(git rev-parse HEAD:template)
       - run: "python .tools/scripts/bump_pyproject.py"
       - run: |-
@@ -40,20 +40,3 @@ jobs:
           pip install --upgrade --requirement 'requirements.txt'
       - run: "pytest --cov"
       - uses: "codecov/codecov-action@v3.1.1"
-  bump_project:
-    if: "github.event.pull_request.merged == true"
-    runs-on: "{{ actions_runner }}"
-    steps:
-      - uses: "actions/checkout@v3"
-      - uses: "actions/setup-python@v4"
-        with:
-          python-version: "{{ python_version }}"
-      - run: |-
-          python -m pip install --upgrade pip
-          pip install --upgrade setuptools wheel
-          pip install copier pyyaml
-          copier --force --vcs-ref $(git rev-parse HEAD:template)
-      - run: "python .tools/scripts/bump_pyproject.py"
-      - uses: "stefanzweifel/git-auto-commit-action@v4"
-        with:
-          commit_message: "Bump `pyproject.toml` dependencies"
