--- a/template/.github/workflows/bump.yml.jinja
+++ b/template/.github/workflows/bump.yml.jinja
@@ -12,19 +12,13 @@ jobs:
   bump_project:
     runs-on: "{{ actions_runner }}"
     steps:
-      - uses: "actions/checkout@v3"
-      - uses: "actions/setup-python@v4"
+      - uses: "copier-python-workflow-setup@v0.0.12"
         with:
           python-version: "{{ python_version }}"
-      - run: |-
-          python -m pip install --upgrade pip
-          pip install --upgrade setuptools wheel
-          pip install copier toml
-          copier --force --vcs-ref $(git rev-parse HEAD:template)
-      - run: "python .tools/scripts/bump_pyproject.py"
+          install-project: false
       - uses: "stefanzweifel/git-auto-commit-action@v4"
         with:
-          commit_message: "Bump `pyproject.toml` dependencies"
+          commit_message: "Bump project template and compose `pyproject.toml`."
 
   # * ------------------------------------------------------------------------------ * #
   # * Changes below should persist in significant template updates.
