--- a/template/setup.ps1.jinja
+++ b/template/setup.ps1.jinja
@@ -2,6 +2,9 @@
 Set up the project, creating a virtual environment and then running update tasks.
 #>
 
+# * -------------------------------------------------------------------------------- * #
+# * Changes below may be lost in significant template updates.
+
 if ($Env:VIRTUAL_ENV) { 'deactivate' }
 if (Test-Path '.venv') { Remove-Item -Recurse -Force '.venv' }
 $GLOBAL_PYTHON = 'py -{{ python_version }}'
@@ -11,3 +14,6 @@ catch [System.Management.Automation.CommandNotFoundException] {
 }
 Invoke-Expression "$GLOBAL_PYTHON -m venv '.venv' --upgrade-deps"
 . './update.ps1'
+
+# * ------------------------------------------------------------------------------ * #
+# * Changes below should persist in significant template updates.
