--- a/template/.tools/pyproject.toml.jinja
+++ b/template/.tools/pyproject.toml.jinja
@@ -20,8 +20,8 @@ classifiers = ["License :: OSI Approved :: MIT License"]
 name = "{{ project_owner_name }}"
 {% if project_email %}email = "{{ project_email }}"{% endif %}
 [project.urls]
-Changes = "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/changelog.html"
-Docs = "https://github.com/{{ project_owner_github_username }}.github.io/{{ github_repo_name }}"
+Changes = "https://{{ project_owner_github_username }}.github.io/{{ github_repo_name }}/changelog.html"
+Docs = "https://{{ project_owner_github_username }}.github.io/{{ github_repo_name }}"
 Home = "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}"
 Tracker = "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/issues"
 
