--- a/template/.github/workflows/main.yml.jinja
+++ b/template/.github/workflows/main.yml.jinja
@@ -9,23 +9,31 @@ jobs:
   pyright:
     runs-on: "{{ actions_runner }}"
     steps:
-      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.12"
+      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.1.0"
         with:
           python-version: "{{ python_version }}"
-      - run: "pyright"
-  pytest-cov:
+      - run: ".tools/scripts/Invoke-Pyright.ps1"
+        shell: "pwsh"
+  ruff:
     runs-on: "{{ actions_runner }}"
     steps:
-      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.12"
+      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.1.0"
+        with:
+          python-version: "{{ python_version }}"
+      - run: "ruff --no-fix --format github ."
+  pytest:
+    runs-on: "{{ actions_runner }}"
+    steps:
+      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.1.0"
         with:
           python-version: "{{ python_version }}"
       - run: "pytest --cov"
       - uses: "codecov/codecov-action@v3.1.3"
   bump_project:
-    needs: ["pyright", "pytest-cov"]
+    needs: ["pyright", "ruff", "pytest"]
     runs-on: "{{ actions_runner }}"
     steps:
-      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.0.12"
+      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.1.0"
         with:
           python-version: "{{ python_version }}"
           install-project: false
