Introduce project version and project activity questions

--- a/template/.tools/pyproject.toml.jinja
+++ b/template/.tools/pyproject.toml.jinja
@@ -10,7 +10,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "{{ project_name }}"
-version = "0.0.0"
+version = "{{ project_version }}"
 description = "{{ project_description }}"
 readme = "README.md"
 license = { file = "LICENSE" }
