--- a/template/docs/conf.py.jinja
+++ b/template/docs/conf.py.jinja
@@ -12,7 +12,7 @@ extensions = ["myst_parser", "sphinx_design"]
 # https://sphinx-book-theme.readthedocs.io/en/stable/reference.html#reference-of-theme-options
 html_theme_options = {
     "path_to_docs": "docs",
-    "repository_url": "https://github.com/{{ project_owner_name }}/{{ project_name }}",
+    "repository_url": "https://github.com/{{ project_owner_github_username }}/{{ project_name }}",
     "repository_branch": "main",
     "use_download_button": True,
     "use_fullscreen_button": True,
