--- a/template/renovate.json.jinja
+++ b/template/renovate.json.jinja
@@ -1,15 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "description": "Establish base config, schedule, and manager defaults.",
-  "extends": [
-    "config:base",
-    ":enablePreCommit",
-    ":disableRateLimiting"
-  ],
+  "extends": ["config:base", ":enablePreCommit", ":disableRateLimiting"],
   "dependencyDashboardApproval": {% if active %}false{% else %}true{% endif %},
-  "schedule": [
-    "{% if active %}on the 16th day of the month{% else %}never{% endif %}"
-  ],
+  "schedule": ["{% if active %}on the 16th day of the month{% else %}never{% endif %}"],
   "git-submodules": {
     "enabled": true
   },
@@ -21,42 +15,25 @@
   ],
   "pip_requirements": {
     "description": "Additionally monitor these files.",
-    "fileMatch": [
-      "^\\.tools/requirements/*"
-    ]
+    "fileMatch": ["^\\.tools/requirements/*"]
   },
   "packageRules": [
     {
       "groupName": "pyright and type stubs",
       "groupSlug": "pyright-and-type-stubs",
-      "matchManagers": [
-        "pip_requirements",
-        "git-submodules"
-      ],
-      "matchPackageNames": [
-        "pyright",
-        "typings"
-      ]
+      "matchManagers": ["pip_requirements", "git-submodules"],
+      "matchPackageNames": ["pyright", "typings"]
     },
     {
       "groupName": "all non-major dependencies except pyright",
       "groupSlug": "all-minor-patch",
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ],
-      "excludeDepNames": [
-        "pyright"
-      ]
+      "matchPackagePatterns": ["*"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "excludeDepNames": ["pyright"]
     },
     {
       "description": "Ignore github-actions dependencies managed by the template.",
-      "matchManagers": [
-        "github-actions"
-      ],
+      "matchManagers": ["github-actions"],
       "ignoreDeps": [
         "dropseed/changerelease",
         "actions/checkout",
@@ -70,9 +47,7 @@
     },
     {
       "description": "Ignore pre-commit dependencies managed by the template.",
-      "matchManagers": [
-        "pre-commit"
-      ],
+      "matchManagers": ["pre-commit"],
       "ignoreDeps": [
         "pre-commit/pre-commit-hooks",
         "psf/black",
@@ -85,12 +60,8 @@
     },
     {
       "description": "Ignore dependencies managed by the template. Do manage pyright.",
-      "matchManagers": [
-        "pip_requirements"
-      ],
-      "matchPaths": [
-        ".tools/requirements/*"
-      ],
+      "matchManagers": ["pip_requirements"],
+      "matchPaths": [".tools/requirements/*"],
       "ignoreDeps": [
         "jupyter-book",
         "watch-files",
