Back-propagate changes from boilercore and boilercv

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -16,6 +16,7 @@ readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">={{ python_version }}"
 classifiers = ["License :: OSI Approved :: MIT License"]
+dependencies = []
 
 [[project.authors]]
 name = "{{ project_owner_name }}"
