--- a/template/.github/workflows/publish.yml.jinja
+++ b/template/.github/workflows/publish.yml.jinja
@@ -10,9 +10,10 @@ jobs:
   publish:
     runs-on: "{{ actions_runner }}"
     steps:
-      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.2.0"
+      - uses: "blakeNaccarato/copier-python-workflow-setup@v0.2.1"
         with:
           python-version: "{{ python_version }}"
+          install-project: false
       - run: "flit publish"
         env:
           FLIT_USERNAME: "__token__"
