--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -40,13 +40,7 @@ fix = true
 select = ["ALL"]
 src = ["src", "tests"]
 target-version = "py311"
-extend-exclude = [
-    "template",
-    "typings",
-    ".github",
-    ".tools",
-    "C:/Users/Blake/AppData/Local/Programs/Python/Python311/Lib/**",
-]
+extend-exclude = ["template", "typings", ".github"]
 ignore = [
     # * ---------------------------------------------------------------------------- * #
     # * Changes below should persist in significant template updates.
