Allow for project overrides

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -36,6 +36,13 @@ ignore_unused = []
 ipykernel = ["IPython"]
 
 [tool.pyright]
+
+# * -------------------------------------------------------------------------------- * #
+# * Changes below should persist in significant template updates.
+
+# * -------------------------------------------------------------------------------- * #
+# * Changes below may be lost in significant template updates.
+
 # Paths
 include = ["src", "tests", "docs"]
 # Type inference helps with untyped upstream but can be unpredictable
