Exclude self from undeclared dependencies

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -29,7 +29,7 @@ Home = "https://github.com/{{ project_owner_github_username }}/{{ github_repo_na
 Tracker = "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/issues"
 
 [tool.fawltydeps]
-ignore_undeclared = ["rich"]
+ignore_undeclared = ["copier_python", "rich"]
 ignore_unused = []
 
 [tool.fawltydeps.custom_mapping]
