Keep submodules in subfolder

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -45,6 +45,8 @@ ipykernel = ["IPython"]
 
 # Paths
 include = ["src", "tests", "docs"]
+# Stubs
+stubPath = "submodules/typings"
 # Type inference helps with untyped upstream but can be unpredictable
 useLibraryCodeForTypes = true
 # Sets most checks to "error". See overrides below
